# SC2MapAnalysis

./: .flake8  CHANGELOG.md  Makefile  README.md  build.py  dummybot.py  ladder_build.sh  pf_perf.py  pyproject.toml  pytest.ini  setup.py  vb.py
.github/workflows/: build_c_extension.yml  build_on_setup.yml  lint.yml  orchestrator.yml  release.yml  tests.yml
MapAnalyzer/: Debugger.py  MapData.py  Pather.py  Polygon.py  __init__.py  constructs.py  exceptions.py  utils.py
MapAnalyzer/cext/: wrapper.py
examples/MassReaper/: README.md  run.py
examples/MassReaper/bot/: consts.py  influence_costs.py  main.py  pathing.py  reapers.py
examples/MassReaper/bot/combat/: base_unit.py  reapers.py  turn_rate.py
extension/: ma_ext.c
ladder_build/: Dockerfile
map_analyzer/: Debugger.py  MapData.py  Pather.py  Polygon.py  Region.py  __init__.py  constants.py  constructs.py  utils.py
tests/: mocksetup.py  test_c_extension.py  test_docs.py  test_pathing.py  test_suite.py
