[tool.poetry]
name = "map_analyzer"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.25.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.semver]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
hypothesis = "^6.82.7"
pytest-cov = "^4.1.0"
matplotlib = "^3.7.2"
click = "^8.1.7"
pytest-html = "^3.2.0"
monkeytype = "^23.3.0"
pytest-benchmark = "^4.0.0"
coverage = "^7.3.0"
codecov = "^2.1.13"
scikit-image = "^0.21.0"
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"
burnysc2 = "^6.4.0"


[tool.poetry.group.semver.dependencies]
python-semantic-release = "7.33.0"

[build-system]
requires = ["poetry-core", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.semantic_release]
branch = "master"
version_variable = "map_analyzer/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
tag_commit = true
# might want these true later
upload_to_pypi = false
upload_to_release = false
hvcs = "github"
commit_message = "{version} [skip ci]" # skip triggering ci pipelines for version commits
